<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="cube26AppName">I Store</string>
    <string name="cube26WidgetName">I-Store</string>
    <string name="tvHolderSampleText">Dummy App</string>
    <string name="tvHolderSampleTextRecommended">Recommended</string>
    <string name="tvError"></string>
    <string name="tvAppName">Name of Application</string>
    <string name="tvAppRating">5 stars</string>
    <string name="tvAppDevName">App Dev</string>
    <string name="tvFullText">Full text comes here.</string>
    <string name="bShare">Share</string>
    <string name="tvGenreMain">Main</string>
    <string name="tvGenreGames">Games</string>
    <string name="tvGenreShopping">Shopping</string>
    <string name="tvGenreSocial">Social</string>
    <string name="tvGenreNews">News</string>
    <string name="tvDescription">Description</string>
    <string name="tvAppUpdateAlertmsg">A new Update to IStore is available. Press OK to update.</string>
    <string name="btnOkLbl">OK</string>
    <string name="msgAppDesabled">This app is disabled. Enable it from App Settings.</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="download">Download</string>
    <string name="video">Video</string>
    <string name="description">Description</string>
    <string name="title_activity_fullscreen_video">FullscreenVideoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_full_screen">FullScreenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="share">Share</string>
    <string name="service_name">DA Service</string>
    <string name="get_token">Get Token</string>
    <string name="invalidate_token">Invalidate Token</string>
    <string name="wipe_token">Wipe Token</string>
    <string name="choose_account">Choose Account</string>
</resources>