<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 Cyanogen, Inc. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         android:visibility="gone" >

        <Spinner
            android:id="@+id/accounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/get_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getToken"
            android:text="@string/get_token" />

        <Button
            android:id="@+id/invalidate_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="invalidateToken"
            android:text="@string/invalidate_token" />

        <Button
            android:id="@+id/choose_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="chooseAccount"
            android:text="@string/choose_account" />
    </LinearLayout>

</ScrollView>