<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1" >

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/app_video_view"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#363636"
            android:orientation="horizontal"
            android:weightSum="10" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageAppIcon"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:background="#00000000" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/appParameters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="marquee"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:text="@string/tvAppName"
                    android:textColor="#FFD74D"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAppDevName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/tvAppDevName"
                    android:textColor="#9FA1A4"
                    android:textSize="15sp" />

                <RatingBar
                    android:id="@+id/rbAppRating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" 
                    android:visibility="invisible"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" >

                    <ImageView
                        android:id="@+id/ivActionButton"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/install"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/bAppActionButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/ivActionButton"
                        android:background="#00FFFFFF"
                        android:gravity="center_vertical"
                        android:textColor="#9FA1A4"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/progressBarLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal"
                        android:weightSum="10" >

                        <TextView
                            android:id="@+id/progress_bytes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/progress_precentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:textColor="@android:color/white" />

                        <ProgressBar
                            android:id="@+id/downloadProgressBar"
                            style="@android:style/Widget.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/progress_bytes"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_toLeftOf="@+id/progress_cancel"
                            android:indeterminate="false"
                            android:indeterminateOnly="false"
                            android:progressDrawable="@drawable/download_progress" />

                        <ImageView
                            android:id="@+id/progress_cancel"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/progress_bytes"
                            android:background="@drawable/ic_cancel" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal"
                        android:paddingRight="4dp" >

                        <ImageView
                            android:id="@+id/progress_cancel_for_download_waiting"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_cancel"
                            android:visibility="gone" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:background="#C9C9C9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.32"
                android:background="#123456" >

                <com.cube26.trendingapps.ui.TopCropImageView
                    android:id="@+id/ivScreenshot1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/placeholder"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/screenshotContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal" >
                    </LinearLayout>
                </HorizontalScrollView>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#C9C9C9" />

            <TextView
                android:id="@+id/tvDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tvDescription"
                android:textColor="#9FA1A4"
                android:textSize="19sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/descriptionWrapperLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <WebView
                    android:id="@+id/tvFullAppDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/tvFullText"
                    android:textColor="#9FA1A4"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/btnShowMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>